--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Jacobtread"/>
+    <meta property="og:description" content="My personal little website."/>
     <meta property="og:url" content="https://jacobtread.github.io/"/>
     <meta property="og:image" content="https://jacobtread.github.io/assets/img/jacobtread.png"/>
     <title>Jacobtread - Home</title>
